--- a/desktop_e/digiclass/package.json
+++ b/desktop_e/digiclass/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.43.2",
     "@electron/notarize": "^1.2.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
