--- a/desktop_e/digiclass/package.json
+++ b/desktop_e/digiclass/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
+    "axios": "^1.3.4",
     "electron-updater": "^5.3.0",
     "vue-router": "4"
   },
